--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
         <!-- favicon import -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Title</title>
+        <title>Titre à changer</title>
     </head>
     <body>
         <div id="app"></div>
