--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         <link
             rel="icon"
             type="image/svg+xml"
-            href="/favicon.ico"
+            href="assets/images/favicon.ico"
         />
         <!-- favicon import -->
         <meta
